--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
     druid:
       url: jdbc:mysql://172.20.182.164:3306/blog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: root
-      password: dreamtechIT2020Zxy
+      password: 
       # 初始连接数
       initialSize: 5
       # 最小连接池数量
